# libg3d

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  libg3d.magic  libg3d.pc.in
plugins/import/: .cvsignore  Makefile.am  imp_3ds.c  imp_3ds.h  imp_3ds_callbacks.c  imp_3ds_callbacks.h  imp_3ds_chunks.h  imp_ac3d.c  imp_ar.c  imp_ar.h  imp_ar_decompress.c  imp_ar_decompress.h  imp_ar_dof.c  imp_ar_dof.h  imp_ase.c  imp_cob.c  imp_collada.c  imp_collada_library.c  imp_collada_library.h  imp_collada_xml.c  imp_collada_xml.h  imp_dae.c  imp_dae_cb.c  imp_dae_cb.h  imp_dae_chunks.h  imp_dae_library.c  imp_dae_library.h  imp_dae_xml.c  imp_dae_xml.h  imp_dxf.c  imp_flt.c  imp_flt.h  imp_flt_callbacks.c  imp_flt_callbacks.h  imp_flt_opcodes.h  imp_glb.c  imp_iob.c  imp_iob.h  imp_iob_callbacks.c  imp_iob_callbacks.h  (+48 more)
plugins/import/imp_3dm/: Makefile.am  imp_3dm.c  imp_3dm.h  imp_3dm_callbacks.c  imp_3dm_callbacks.h  imp_3dm_chunks.h  imp_3dm_object.c  imp_3dm_object.h  imp_3dm_object_types.h  imp_3dm_types.h
plugins/import/imp_3dmf/: Makefile.am  imp_3dmf.c  imp_3dmf_callbacks.c  imp_3dmf_callbacks.h  imp_3dmf_chunks.h  support.info
plugins/import/imp_3ds/: Makefile.am  imp_3ds.c  imp_3ds.h  imp_3ds_callbacks.c  imp_3ds_callbacks.h  imp_3ds_chunks.h  support.info
plugins/import/imp_ac3d/: Makefile.am  imp_ac3d.c  support.info
plugins/import/imp_acf/: Makefile.am  README  imp_acf.c  imp_acf.h  imp_acf_airfoil.c  imp_acf_airfoil.h  imp_acf_def.c  imp_acf_def.h  imp_acf_def_acf603.h  imp_acf_def_acf625.h  imp_acf_def_acf630.h  imp_acf_def_acf640.h  imp_acf_def_acf651.h  imp_acf_def_acf700.h  imp_acf_def_acf740.h  imp_acf_def_proto.h  imp_acf_detect.c  imp_acf_detect.h  imp_acf_wing.c  imp_acf_wing.h  support.info
plugins/import/imp_ar/: Makefile.am  imp_ar.c  imp_ar.h  imp_ar_carini.c  imp_ar_carini.h  imp_ar_decompress.c  imp_ar_decompress.h  imp_ar_dof.c  imp_ar_dof.h  support.info
plugins/import/imp_ase/: Makefile.am  imp_ase.c  support.info
plugins/import/imp_blend/: Makefile.am  imp_blend.c  imp_blend_callbacks.c  imp_blend_callbacks.h  imp_blend_chunks.h  imp_blend_def.h  imp_blend_ptr.c  imp_blend_ptr.h  imp_blend_read.c  imp_blend_read.h  imp_blend_sdna.c  imp_blend_sdna.h  imp_blend_types.h  support.info
plugins/import/imp_c4d/: Makefile.am  imp_c4d.c  support.info
plugins/import/imp_cob/: Makefile.am  imp_cob.c  support.info
plugins/import/imp_dae/: Makefile.am  imp_dae.c  imp_dae_cb.c  imp_dae_cb.h  imp_dae_chunks.h  imp_dae_library.c  imp_dae_xml.c  imp_dae_xml.h  support.info
plugins/import/imp_dpm/: Makefile.am  imp_dpm.c  support.info
plugins/import/imp_dxf/: Makefile.am  imp_dxf.c  imp_dxf.h  imp_dxf_callbacks.c  imp_dxf_callbacks.h  imp_dxf_chunks.h  imp_dxf_color.c  imp_dxf_color.h  imp_dxf_def.h  imp_dxf_entities.h  imp_dxf_prop.c  imp_dxf_prop.h  imp_dxf_section.c  imp_dxf_section.h  imp_dxf_types.h  imp_dxf_vars.h  support.info
plugins/import/imp_flt/: Makefile.am  imp_flt.c  imp_flt.h  imp_flt_callbacks.c  imp_flt_callbacks.h  imp_flt_opcodes.h  support.info
plugins/import/imp_glb/: Makefile.am  imp_glb.c  support.info
plugins/import/imp_heightfield/: Makefile.am  imp_heightfield.c  support.info
plugins/import/imp_iob/: Makefile.am  imp_iob.c  imp_iob.h  imp_iob_callbacks.c  imp_iob_callbacks.h  imp_iob_chunks.h  support.info
plugins/import/imp_joe/: Makefile.am  imp_joe.c  support.info
plugins/import/imp_kmz/: Makefile.am  imp_kmz.c  support.info
plugins/import/imp_ldraw/: Makefile.am  imp_ldraw.c  imp_ldraw_color.c  imp_ldraw_color.h  imp_ldraw_library.c  imp_ldraw_library.h  imp_ldraw_misc.h  imp_ldraw_mpd.c  imp_ldraw_mpd.h  imp_ldraw_part.c  imp_ldraw_part.h  imp_ldraw_types.h  support.info
plugins/import/imp_leocad/: Makefile.am  imp_leocad.c  imp_leocad_library.c  imp_leocad_library.h  support.info
plugins/import/imp_lua/: API.txt  Makefile.am  imp_lua.c  imp_lua_funcs.c  imp_lua_funcs.h  imp_lua_gc.c  imp_lua_gc.h
plugins/import/imp_lwo/: Makefile.am  imp_lwo.c  imp_lwo.h  imp_lwo_callbacks.c  imp_lwo_callbacks.h  imp_lwo_chunks.h  support.info
plugins/import/imp_max/: Makefile.am  imp_max.c  imp_max_callbacks.c  imp_max_callbacks.h  imp_max_chunks.h  support.info
plugins/import/imp_maya/: Makefile.am  imp_maya.c  imp_maya_callbacks.c  imp_maya_callbacks.h  imp_maya_chunks.h  imp_maya_obj.h  support.info
plugins/import/imp_md2/: Makefile.am  imp_md2.c  imp_md2_normals.h  support.info
plugins/import/imp_md3/: Makefile.am  imp_md3.c  support.info
plugins/import/imp_mesh/: Makefile.am  imp_mesh.c  imp_mesh.h
plugins/import/imp_msfsmdl/: Makefile.am  imp_msfsmdl.c  imp_msfsmdl_bgl.c  imp_msfsmdl_bgl.h  imp_msfsmdl_callbacks.c  imp_msfsmdl_callbacks.h  imp_msfsmdl_chunks.h  imp_msfsmdl_texture.c  imp_msfsmdl_texture.h
plugins/import/imp_nff/: Makefile.am  imp_nff.c  support.info
plugins/import/imp_obj/: Makefile.am  imp_obj.c  support.info
plugins/import/imp_osm/: Makefile.am  imp_osm.c  support.info
plugins/import/imp_pie/: Makefile.am  imp_pie.c
plugins/import/imp_ply/: Makefile.am  imp_ply.c
plugins/import/imp_q3o/: Makefile.am  imp_q3o.c  support.info
plugins/import/imp_r4/: Makefile.am  imp_r4.c  imp_r4_callbacks.c  imp_r4_callbacks.h  imp_r4_chunks.h  support.info
plugins/import/imp_rbh/: Makefile.am  imp_rbh.c  imp_rbh_callbacks.c  imp_rbh_callbacks.h  imp_rbh_chunks.h  support.info
plugins/import/imp_ror/: Makefile.am  imp_ror.c  imp_ror_material.c  imp_ror_material.h
plugins/import/imp_sh3d/: Makefile.am  imp_sh3d.c  javaser.c  javaser.h
plugins/import/imp_skp/: Makefile.am  imp_skp.c  imp_skp.h  imp_skp_callbacks.c  imp_skp_callbacks.h  imp_skp_chunks.h  imp_skp_read.c  imp_skp_read.h  imp_skp_types.h  support.info
plugins/import/imp_stl/: Makefile.am  support.info
plugins/import/imp_ta/: Makefile.am  imp_ta.c  imp_ta_3do.c  imp_ta_3do.h  imp_ta_3do_palette.h  (+1 more)
programs/: Makefile.am  g3d-img2ppm.c  g3d-stat.c
tests/: .cvsignore  Makefile.am  test_buf.c  test_cxx.cxx  test_imgdump.c  test_lib.c  test_vector.c
(+130 files in other folders)
